# tinyDiskII

./: .gitattributes  README.md
firmware/: .gitignore  main.cpp  makefile
firmware/src/: clock.cpp  clock.h  debug.h  encoder.cpp  encoder.h  floppy_main.cpp  floppy_main.h  i2c.cpp  i2c.h  oled_gui.cpp  oled_gui.h  oled_lcd.cpp  oled_lcd.h  prompt.cpp  prompt.h  sdcard.cpp  sdcard.h  sdcard_fat.cpp  sdcard_fat.h  sdcard_gpio.cpp  sdcard_gpio.h  sdcard_nic.cpp  sdcard_nic.h  std_font.cpp  std_font.h
firmware/src/util/: macro.h  port.h  utils.h
firmware/tests/: CMakeLists.txt  test_fat.cpp  test_fat_filename.cpp  test_gui.cpp
schematics/: tinyDiskII.kicad_pcb  tinyDiskII.kicad_prl  tinyDiskII.kicad_pro  tinyDiskII.kicad_sch
